<resources>
    <string name="app_name">TPIntentWithResultReturn</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome">Hello</string>
    <string name="logout">Logout</string>
</resources>