<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/TextViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/welcome"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/TextViewUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextViewWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/username"
        android:textSize="20sp" />

    <Button
        android:id="@+id/ButtonLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextViewUserName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/logout" />
</RelativeLayout>